--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,14 @@
 		margin: 10px;
 		padding-top: 10px;}
 
+	h4{
+		text-align: center;
+		font-family: serif;
+		font-style: normal;
+		font-size: 10px;
+		margin: 10px;
+		padding-top: 10px;}
+
 	div{
 		display: block;
 		margin-left: auto;
