--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@
 		font-family: serif;
 		font-style: normal;
 		font-size: 10px;
-		margin: 10px;
+		margin-bottom: 30px;
 		padding-top: 10px;}
 
 	div{
@@ -54,7 +54,7 @@
 		border-style: solid;
 		border-color: black;
 		border-width: 3px;
-		margin-top: 30px;
+		margin-top: 20px;
 		margin-left: auto;
 		margin-right: auto;
 		padding: 20px;
@@ -66,7 +66,8 @@
 	img{
 		display: block;
 		margin-left: auto;
-		margin-right: auto;}
+		margin-right: auto;
+		margin-bottom: 20px;}
 
 	audio{
 		display: block;
